fixing/style => flex-start for body alignement (center)

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,7 +7,7 @@
 body {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .app-md-portfolio {
